--- a/src/KnowledgeSpace.BackendServer/appsettings.Development.json
+++ b/src/KnowledgeSpace.BackendServer/appsettings.Development.json
@@ -5,7 +5,7 @@
     "DefaultConnection": "Server=.;Database=KnowledgeSpace;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
-    "IssuerUri": "https://knowledgespace.tedu.com.vn",
+    "IssuerUri": "https://localhost:5002",
     "Clients": [
       {
         "Enabled": true,
@@ -78,9 +78,9 @@
     "Password": "xynignkmcdlfkvdr"
   },
   "PortalUrl": "https://localhost:5002",
-  "CacheDurationInHours": 12,
-  "OneSignal": {
-    "AppId": "6d8ca07d-4c95-48d0-86a6-16c9d3305c39",
-    "AppSecret": "MWJmYjI0MDktZmUwMy00M2Y4LWI3ZGQtMmEwNTNkNDM5OWJm"
-  }
+  "CacheDurationInHours": 12
+  //"OneSignal": {
+  //  "AppId": "6d8ca07d-4c95-48d0-86a6-16c9d3305c39",
+  //  "AppSecret": "MWJmYjI0MDktZmUwMy00M2Y4LWI3ZGQtMmEwNTNkNDM5OWJm"
+  //}
 }
