--- a/src/KnowledgeSpace.BackendServer/appsettings.Development.json
+++ b/src/KnowledgeSpace.BackendServer/appsettings.Development.json
@@ -18,7 +18,13 @@
         "RequireConsent": false,
         "PostLogoutRedirectUris": [ "https://localhost:5002/signout-callback-oidc" ],
         "RequirePkce": true,
-        "AllowOfflineAccess": true
+        "AllowOfflineAccess": true,
+        "IdentityTokenLifetime": 1296000,
+        "AccessTokenLifetime": 1296000,
+        "AuthorizationCodeLifetime": 1296000
+
+
+
       },
       {
         "Enabled": true,
@@ -52,7 +58,10 @@
         "RequirePkce": true,
         "RequireClientSecret": false,
         "AllowAccessTokensViaBrowser": true,
-        "AllowOfflineAccess": true
+        "AllowOfflineAccess": true,
+        "IdentityTokenLifetime": 1296000,
+        "AccessTokenLifetime": 1296000,
+        "AuthorizationCodeLifetime": 1296000
       }
     ]
   },
