--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -30,7 +30,10 @@
         "alertifyjs": "^1.13.1",
         "chart.js": "^2.9.4",
         "core-js": "3.6.4",
+        "file-saver": "^2.0.5",
         "font-awesome": "4.7.0",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.25",
         "ng2-charts": "^2.4.3",
         "ngx-bootstrap": "^5.6.1",
         "ngx-spinner": "^14.0.0",
@@ -41,6 +44,7 @@
         "quill": "^1.3.7",
         "rxjs": "6.5.4",
         "tslib": "^2.0.0",
+        "xlsx": "^0.18.5",
         "yarn": "1.22.0",
         "zone.js": "~0.11.4"
     },
@@ -51,8 +55,9 @@
         "@angular/language-service": "14.2.6",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "2.0.8",
+        "@types/jspdf": "^2.0.0",
         "@types/node": "13.7.6",
-        "codelyzer": "^6.0.0",
+        "codelyzer": "^0.0.28",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~6.4.1",
