--- a/src/KnowledgeSpace.BackendServer/KnowledgeSpace.BackendServer.csproj
+++ b/src/KnowledgeSpace.BackendServer/KnowledgeSpace.BackendServer.csproj
@@ -46,5 +46,6 @@
     <Folder Include="wwwroot\lib\jquery-validation\dist\" />
     <Folder Include="wwwroot\lib\jquery\" />
     <Folder Include="wwwroot\lib\jquery\dist\" />
+    <Folder Include="wwwroot\user-attachments\" />
   </ItemGroup>
 </Project>
